// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default render 1`] = `
NodeList [
  <link
    data-react-helmet="true"
    href="/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    data-react-helmet="true"
    href="/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    data-react-helmet="true"
    href="/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
]
`;

exports[`with environment specified 1`] = `
NodeList [
  <link
    data-react-helmet="true"
    href="/apple-touch-icon-staging.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    data-react-helmet="true"
    href="/favicon-32x32-staging.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    data-react-helmet="true"
    href="/favicon-16x16-staging.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
]
`;
